add buttons group. move js into src

--- a/style.css
+++ b/style.css
@@ -35,11 +35,44 @@ html {
 }
 
 .block-paragraph {
-  font-size: 14px;
   margin-bottom: 12px;
+  font-size: 14px;
   line-height: 1.75;
 }
 
 .block-paragraph:last-of-type {
   margin-bottom: 36px;
+}
+
+.block-title:hover .block-paragraph:hover {
+}
+.btn-group {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+.btn-group__item {
+  margin-right: 5px;
+}
+.btn {
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.btn_type_h1 {
+  background-image: url("./icons/h1.svg");
+}
+.btn_type_text {
+  background-image: url("./icons/text.svg");
+}
+.btn_type_delete {
+  background-image: url("./icons/delete.svg");
+}
+.btn_type_move {
+  background-image: url("./icons/move.svg");
 }
